flaskapp/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  namespace: flaskapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: sagarchauhan2k18/flask-mongodb-app:latest
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: "200m"
            memory: "250Mi"
          limits:
            cpu: "500m"
            memory: "500Mi"
