flaskapp/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: sagarapp
spec:
  ingressClassName: nginx
  rules:
    - host: flask.sagar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 80
  tls:
    - hosts:
      - flask.sagar.com
      secretName: flask-tls
